<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="display_resolution_category"
        android:title="@string/display_resolution_category_title">

        <Preference
            android:key="display_current_resolution"
            app:iconSpaceReserved="false"
            android:title="@string/display_current_resolution_title"
            android:selectable="false" />

        <ListPreference
            android:key="display_resolution_preset"
            app:iconSpaceReserved="false"
            android:title="@string/display_resolution_preset_title"
            android:summary="%s"
            android:entries="@array/display_resolution_entries"
            android:entryValues="@array/display_resolution_values" />

        <Preference
            android:key="display_resolution_custom"
            app:iconSpaceReserved="false"
            android:title="@string/display_resolution_custom_title"
            android:summary="@string/display_resolution_custom_summary" />

        <Preference
            android:key="display_resolution_reset"
            app:iconSpaceReserved="false"
            android:title="@string/display_resolution_reset_title"
            android:summary="@string/display_resolution_reset_summary" />

        <Preference
            android:key="display_resolution_footer"
            app:iconSpaceReserved="false"
            android:summary="@string/display_resolution_footer"
            android:selectable="false" />

    </PreferenceCategory>

</PreferenceScreen>
